--- a/config/database.yml
+++ b/config/database.yml
@@ -14,7 +14,7 @@ default: &default
   encoding: utf8mb4
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
   username: <%= ENV.fetch("DB_USER", "root") %>
-  password: <%= ENV.fetch("DB_PASS", "password") %>
+  password: <%= ENV.fetch("DB_PASSWORD", "password") %>
   port: <%= ENV.fetch("DB_PORT", 3306) %>
   host: <%= ENV.fetch("DB_HOST", "localhost") %>
   socket: /var/run/mysqld/mysqld.sock
